[workspace]
resolver = "2"
members = [
    "lesson1",
    "lesson2",
    "lesson3"
]

# Optional: Add a resolver to ensure consistent dependency versions
[workspace.dependencies]
iroh = "0.34.1"
iroh-base = "0.34.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 