[workspace]
resolver = "2"
members = [
    "echo1",
    "echo2",
    "echo3",
    "sendme1",
    "sendme2",
    "sendme3",
    "sendme4",
]

# Optional: Add a resolver to ensure consistent dependency versions
[workspace.dependencies]
iroh = "0.35"
iroh-base = "0.35"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 